--- a/question1_style_mobile.css
+++ b/question1_style_mobile.css
@@ -194,6 +194,18 @@ li:nth-child(5) {
     animation: fadeIn 0.5s ease-in-out;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:link {
+    color: white;
+}
+
+a:visited {
+    color: white;
+}
+
 .time {
     display: block;
     margin: 15vh 0 2.0313vh 0;
